# ticket.trfnv.ru

./: .gitignore  DEVELOPMENT_SUMMARY.md  Dockerfile  ROADMAP.md  SEATING_IMPLEMENTATION.md  TEST_PLAN.md  docker-compose.yml
plugins/pretix-custom-seating/: README.md  pyproject.toml
plugins/pretix-custom-seating/pretix_custom_seating/: __init__.py  apps.py  signals.py  tests.py
plugins/pretix-custom-seating/pretix_custom_seating/management/commands/: init_seating.py
plugins/pretix-custom-seating/pretix_custom_seating/static/pretix_custom_seating/: seating.css  seating.js
plugins/pretix-custom-seating/pretix_custom_seating/templates/pretix_custom_seating/: plan.html
